# src/routers/auth.js
@@ -1,21 +1,39 @@
 import { Router } from 'express';
 
-import * as authController from "../controllers/auth.js";
+import * as authController from '../controllers/auth.js';
 
-import { ctrlWrapper } from "../utils/ctrlWrapper.js";
+import { ctrlWrapper } from '../utils/ctrlWrapper.js';
 
-import { validateBody } from "../middlewares/validateBody.js";
+import { validateBody } from '../middlewares/validateBody.js';
 
-import { authRegisterSchema, authLoginSchema } from "../validation/auth.js";
+import {
+  authRegisterSchema,
+  authLoginSchema,
+  forgotPasswordSchema,
+} from '../validation/auth.js';
 
 const authRouter = Router();
 
-authRouter.post("/register", validateBody(authRegisterSchema), ctrlWrapper(authController.registerController));
+authRouter.post(
+  '/register',
+  validateBody(authRegisterSchema),
+  ctrlWrapper(authController.registerController),
+);
 
-authRouter.post("/login", validateBody(authLoginSchema), ctrlWrapper(authController.loginController));
+authRouter.post(
+  '/login',
+  validateBody(authLoginSchema),
+  ctrlWrapper(authController.loginController),
+);
 
-authRouter.post("/refresh", ctrlWrapper(authController.refreshTokenController));
+authRouter.post('/refresh', ctrlWrapper(authController.refreshTokenController));
 
-authRouter.post("/logout", ctrlWrapper(authController.logoutController));
+authRouter.post('/logout', ctrlWrapper(authController.logoutController));
+
+authRouter.post(
+  '/forgot-password',
+  validateBody(forgotPasswordSchema),
+  ctrlWrapper(authController.forgotPasswordController),
+); //роут для форготпасс
 
 export default authRouter;
